Resolves: tdf#95428 backspace in readonly macro editor hangs

Change-Id: I16568b00e92d18f32818188ba3ab8df92bbd13aa